Fixed sunburst legend overlap (#145)
Allows for different chart types to have different size colour legends. Heatmap has space to have a taller one, but that it not so appropriate in sunburst

--- a/packages/perspective-viewer-d3fc/src/less/chart.less
+++ b/packages/perspective-viewer-d3fc/src/less/chart.less
@@ -153,6 +153,7 @@
 
         &.legend-color {
             width: 90px;
+            height: 150px;
         }
 
         &[borderbox-on-hover="true"] {
@@ -211,6 +212,10 @@
                 color: rgb(51, 51, 51);
             }
         }
+    }
+
+    .d3_heatmap .legend-container.legend-color {
+        height: 200px;
     }
 
     .zoom-controls {
